helloworld_example/hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: helloworld
  labels:
    app: hello-svc
spec:
  selector:
    app: hello
  ports:
   - port: 80
     targetPort: 80
